tests/snapshots/run_wpt_conformance__onnx_abs_int32_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "abs.https.any.js",
    "abs int32 4D tensor",
    "onnx",
    "PASS",
)
